BusOne/src/objects/HTML_Report_vod__c.object
<CustomObject>
    <description>Stores report files that can be displayed within the Veeva application.</description>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Text area that contains the report description.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Failure_Msg_vod__c</fullName>
        <description>Failure_Msg_vod captures the reasons for instances when file publishing is not completed successfully. It will be populated only when HTML_Report_vod.Status_vod = Failed_vod.</description>
        <label>Status Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_RecordType_Id_vod__c</fullName>
        <description>The stamped value of the object record type id.</description>
        <label>Object Record Type Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_RecordType_vod__c</fullName>
        <description>Used to display the object record type. When record is saved, it stored the object record type developer name.</description>
        <label>Object Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field to configure MyInsights visualization for phone form factor</description>
        <label>Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Name_vod__c</fullName>
        <description>Name of the profile that this record applies to.</description>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_vod__c</fullName>
        <description>Used to indicate which User Profile the report is applicable for.</description>
        <label>Profile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Published_Date_vod__c</fullName>
        <description>Indicates the end time of a job from when all records have been written back to Salesforce.</description>
        <label>Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Review_Before_Submit_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When enabled, the user will be forced to review the designated report before being able to submit the record</description>
        <label>Enforce Report Review Before Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sharing_Group_vod__c</fullName>
        <description>Used for Sharing Rules</description>
        <label>Sharing Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status of the publishing job</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In_Progress_vod</fullName>
                </value>
                <value>
                    <fullName>Published_vod</fullName>
                </value>
                <value>
                    <fullName>Failed_vod</fullName>
                </value>
                <value>
                    <fullName>Unpublished_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>HTML Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HTML Reports</pluralLabel>
    <recordTypes>
        <fullName>Account_Plan_vod</fullName>
        <active>true</active>
        <description>Account Plan Dashboard</description>
        <label>Account_Plan_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Profile_Override_vod</fullName>
        <active>true</active>
        <description>All HTML reports records with this record type will be Account Screen Replacements.</description>
        <label>Account_Profile_Override_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Reports_vod</fullName>
        <active>true</active>
        <description>HTML Account Reports</description>
        <label>Account_Reports_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inventory_Monitoring_vod</fullName>
        <active>true</active>
        <description>HTML Reports for Inventory Monitoring</description>
        <label>Inventory_Monitoring_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>KOL_Profile_vod</fullName>
        <active>true</active>
        <description>KOL HTML Profile</description>
        <label>KOL_Profile_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Orders_vod</fullName>
        <active>true</active>
        <description>Orders Report</description>
        <label>Orders_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Remote_Meeting_vod</fullName>
        <active>true</active>
        <description>Remote Meeting</description>
        <label>Remote_Meeting_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Territory_Insights_vod</fullName>
        <active>true</active>
        <description>HTML Territory Insights</description>
        <label>Territory_Insights_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>